# brain

./: .gitignore  README.md
backend/: README.md  backend.cabal  brain-backend.cabal  stack.yaml
backend/app/: Main.hs
backend/src/: Brain.hs  BrainComms.hs  BrainData.hs  BrainMsg.hs  BrainState.hs  CommsParser.hs  NameGen.hs
backend/test/: ArbitaryInstances.hs  ArbitraryInstances.hs  BrainSpec.hs  BrainStateSpec.hs  CommsParserSpec.hs  NameGenSpec.hs
plugin/: chrome-plugin.css  chrome-plugin.html  chrome-plugin.js  elm-init-chrome.js  elm-package.json  fuse.js  fuse.tests.js  manifest.json  package.json  tsconfig.json  tslint.json
plugin/chrome/: manifest.json  popup.css  popup.html
plugin/chrome-plugin/: elm-init-chrome.js  manifest.json
plugin/src/: Main.elm  app.ts  background.ts  content.ts  declarations.d.ts  lib.spec.ts  lib.ts  popup.ts  state.interface.ts  state.ts  store.interface.ts  store.spec.ts  store.ts
plugin/src/app/: app.ts  broadcast.ts  update-badge.ts
plugin/src/libs/: maybe.spec.ts  maybe.ts  websockets.spec.ts  websockets.ts
plugin/src/reducers/: liftReducer.spec.ts  liftReducer.ts  pages.reducer.spec.ts  pages.reducer.ts
plugin/src/reducers/pages/: pages.reducer.spec.ts  pages.reducer.ts
plugin/src/reducers/pages/actions/: .#actions.interface.ts  action.creators.spec.ts  action.creators.ts  actions.interface.ts  addPageEvent.action.spec.ts  addPageEvent.action.ts  canonicalEvent.action.ts  pageShownEvent.action.spec.ts  pageShownEvent.action.ts
plugin/src/state/: state.init.ts  state.interface.ts
plugin/src/store/: store.interface.ts  store.spec.ts  store.ts
plugin/src/testing/: fixtures.ts
plugin/src/views/: badge.view.spec.ts  badge.view.ts  popup.view.spec.ts  popup.view.ts
plugin/test/: mocha.opts
