name:                brain-backend
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/backend#readme
license:             MIT
license-file:        LICENSE
author:              Mateusz Curylo
maintainer:          mhcurylo@gamil.com
copyright:           Mateusz Curylo
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Brain, BrainData
  build-depends:       base >= 4.7 && < 5
                     , text
                     , http-types
                     , wai
                     , websockets
                     , wai-websockets
                     , warp
                     , containers
  default-language:    Haskell2010

executable brain-backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brain-backend
  default-language:    Haskell2010

test-suite brain-backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , brain-backend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/backend
